scooted nav up and added title

--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,15 @@ body {
   overflow: hidden;
 }
 
+nav {
+  position: absolute;
+  top: 2%;
+}
+
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  position: relative;
+  margin: 0;
+  font-size: 2rem;
 }
 
 button {
