--- a/src/index.css
+++ b/src/index.css
@@ -13,15 +13,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: rgba(255, 255, 255, 0.87);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #fcf8d6;
 }
 
 body {
@@ -32,7 +33,8 @@ body {
   width: 100%;
   min-width: 320px;
   min-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+
 }
 
 nav {
@@ -64,6 +66,7 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
 
 @media (prefers-color-scheme: light) {
   :root {
