update imageUrls for deployment

--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,8 @@ button:focus-visible {
 }
 
 .image-container img{
-  width: 10rem;
+  margin-top: 1rem;
+  width: 15rem;
   height: auto;
   border-radius: 1rem;
 }
