--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 2.5vmin;
 
-  color-scheme: light dark;
+
   color: rgba(255, 255, 255, 0.87);
   background-color: black;
 
@@ -77,8 +77,8 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #f9f9f9;
+    background-color: black;
   }
   a:hover {
     color: #747bff;
