--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: 'Noto Sans';
   line-height: 1.5;
   font-weight: 400;
-  font-size: 2.5vmin;
+  font-size: 1.5vmin;
 
   --primary-background: #FAF8F4;
   --secondary-background: #F2F3E5;
@@ -60,29 +60,97 @@ h2 {
 
 a {
   font-weight: 500;
-  color: var(--dark-text);
+  color: var(--light-text);
   text-decoration: none;
 }
 
 a:hover {
   color: var(--dark-pop);
   text-decoration: underline;
+  font-weight: 800;
 }
 
 a#site-title:hover {
   text-decoration: none;
-  color: var(--dark-text);
+  color: var(--light-text);
+  font-weight: 800;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#site-logo {
+  position: absolute;
+  top: 50%;
+  left: -3.5%;
+  height: 3.6rem;
+  margin: -1.7rem 0;
+}
+
+#site-title-text-wrapper {
+  line-height: 2.2rem;
+  font-weight: 700;
+}
+
+.redline, .grayline {
+  height: .35rem;
+  width: 1.5rem;
+}
+
+.redline {
+  background-color: #CA0A12;
+}
+
+.grayline {
+  background-color: var(--light-text);
+}
+
+#nav-link-wrapper {
+  position: absolute;
+  width: 50%;
+  top: 100%;
+  left: 45%;
+}
+
+#nav-language-toggle {
+  position: absolute;
+  width: 18%;
+  top: 0;
+  left: 75%;
+}
+
+.selected {
+  font-weight: 800;
+}
+
+#search-icon {
+  height: 1.5rem;
+}
+
+#language-icon {
+  height: 1.5rem;
 }
 
 .title {
-  color: var(--dark-text);
+
   font-size: 2rem;
   font-family: 'Noto Sans', sans-serif;
   font-weight: 600;
 }
 
 .subtitle {
-  color: var(--dark-text);
+
   font-size: 1.8rem;
   font-family: 'Noto Sans', sans-serif;
   font-weight: 500;
