--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,17 @@ ELEMENTS
 
 CLASSES:
 
-  Containers
-  Wrappers
-  Modified Elements
+  Containers (holds multiple elements inside of wrappers)
+  Wrappers (holds a single element)
+  Modified Elements (an html element of a specific class)
 
 IDS:
 
   NOTE - LIST FILE WHERE USED IN A COMMENT
 
-  Containers
-  Wrappers
-  Modified Elements
+  Containers (holds multiple elements inside of wrappers)
+  Wrappers (holds a single element)
+  Modified Elements (an html element of a specific ID)
 */
 
 /* ELEMENTS */
@@ -99,7 +99,28 @@ img {
 
 /* IDs */
 
-/* Nav.jsx */
+#app-container {
+  width: 97vw;
+  height: 88vh;
+  margin: 4rem 2rem 1rem 1rem;
+}
+
+#top-nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  background-color: var(--three);
+  top: 7%;
+  left: 15%;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  width: 80vw;
+  height: auto;
+  z-index: 4;
+}
+
 #nav-link-wrapper {
   position: absolute;
   width: 50%;
@@ -144,7 +165,18 @@ a#site-title:hover {
   height: 1.5rem;
 }
 
-#tenant-resources-heading-wrapper {
+#about-page-container {
+  margin: 10rem 0 0 0;
+  padding: 0 10rem;
+  position: absolute;
+}
+
+#resources-page-container {
+  margin: 10rem 0 0 0;
+  width: 100vw;
+}
+
+#resources-heading-wrapper {
   position: absolute;
   top: 50%;
   left: 0%;
@@ -153,9 +185,37 @@ a#site-title:hover {
   margin: 0 -1rem 0 -2rem;
 }
 
-#tenant-resources-heading-wrapper h1{
+#resources-heading-wrapper h1{
   margin: -50vw 0 0 0;
   font-size: 8vw;
+}
+
+#resources-grid-container {
+  margin: 55rem 0 0 0;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+}
+
+#contact-page-container {
+  margin: 10rem 0 0 0;
+  width: 95vw;
+  padding: 0;
+  position: relative;
+}
+
+#contact-list-container {
+  margin: 3rem 0 0 0;
+}
+
+#email-form {
+  margin: 10rem 0 0 0
+}
+
+#blog-page-container {
+  margin: 10rem 0 0 0;
+  padding: 0 10rem;
+  text-align: center;
 }
 
 /* CLASSES */
@@ -170,7 +230,8 @@ a#site-title:hover {
 .row {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
+  position: relative;
   justify-content: space-between;
 }
 
@@ -237,6 +298,24 @@ a#site-title:hover {
 .page-description-container p {
   font-size: 2vw;
   margin-top: -1vw;
+}
+
+.resource-container {
+  position: relative;
+    border: solid 1px rgba(150, 150, 150, 0.5);
+    border-radius: 1rem;
+    padding: 0.5rem;
+    margin: 2rem;
+    width: 20rem;
+    color: #ccc;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.resource-container:hover {
+  box-shadow: 0 0 1px 1px #ccc;
 }
 
 @media (prefers-color-scheme: light) {
