--- a/src/index.css
+++ b/src/index.css
@@ -123,8 +123,8 @@ img {
 
 #nav-link-wrapper {
   position: relative;
-  width: 25rem;
-  margin-right: 2rem;
+  width: 20vw;
+  margin-right: 4vw;
   margin-top: 3rem;
 }
 
@@ -208,7 +208,7 @@ a#site-title:hover {
 #about-page-text-wrapper {
   text-align: left;
   width: 50%;
-  font-size: 1.6rem;
+  font-size: 1.25rem;
   padding-left: 3rem;
 }
 
@@ -217,6 +217,29 @@ a#site-title:hover {
   position: relative;
   width: 50%;
 }
+
+
+#disclaimer-page-container {
+  margin: 0 0 0 -2rem;
+  position: relative;
+  height: 43vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100vw;
+
+}
+
+#disclaimer-page-header h1 {
+  text-align: center;
+}
+
+#disclaimer-page-content-container {
+  width: 80vw;
+  font-size: 1.5rem;
+}
+
 #resources-page-container {
   margin: 0 0 0 -1rem;
   width: 99vw;
@@ -229,8 +252,9 @@ a#site-title:hover {
 }
 
 #resources-heading-wrapper h1{
-  margin: -50vw 0 0 0;
-  font-size: 8vw;
+  margin: -53vw 0 0 0;
+  padding: 0 10vw;
+  font-size: 6.4vw;
 }
 
 #resources-grid-container {
@@ -356,6 +380,16 @@ width: 1.8rem;
   font-size: 1.3rem;
 }
 
+#footer a {
+  color: var(--secondary-background);
+  text-decoration: none;
+}
+
+#footer a:hover {
+  font-weight: 500;
+  text-decoration: underline;
+}
+
 /* CLASSES */
 
 .column {
@@ -429,10 +463,15 @@ width: 1.8rem;
   background-color: var(--bright-pop);
   font-family: 'Noto Sans';
   font-weight: 600;
+  font-size: 1.1rem;
   height: 4.5rem;
   width: 14rem;
   border-radius: 6.5rem;
   border: none;
+}
+
+.submit:hover {
+  box-shadow: .1rem 0 .5rem .1rem var(--light-text);
 }
 
 .selected {
